Fix Inhalt overflow visible

--- a/css/inhalt/inhalt.css
+++ b/css/inhalt/inhalt.css
@@ -19,6 +19,7 @@
 	box-shadow: 0 0 24px 2px #111, inset 0 12px 12px -8px grey;
 	/*min-height: calc(100vh - var(--hoehe));*/
 	/*overflow-x: hidden;*/
+	overflow-x: hidden
 }
 
 #inhalt > h1:first-of-type {
